--- a/_layouts/take5-raw.html
+++ b/_layouts/take5-raw.html
@@ -9,24 +9,8 @@
 {%- assign main = site.data.courses-page -%}
 {%- assign course = site.data.take5[page.course_ID] -%}
 
-<nav class="courses-format" aria-label="Courses">
-  <div class="container">
-    <ul role="list">
-      <li>
-        <a href="/courses/full">{{ main.full_courses.format }}</a>
-      </li>
-      <li>
-        <a href="/courses/gym-shorts">{{ main.gym_shorts.format }}</a>
-      </li>
-      <li>
-        <a href="/courses/take5" aria-current="page">{{ main.take5_tutorials.format }}</a>
-      </li>
-      <li>
-        <a href="/collections">{{ main.collections.format }}</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+{%- assign page_active = "take5" -%}
+{%- include partials/nav-courses-format.html -%}
 
 <div class="container">
   <div class="row">
