--- a/_includes/courses/about/index.html
+++ b/_includes/courses/about/index.html
@@ -1,4 +1,4 @@
-{%- assign about = site.data.page.courses.about -%}
+{%- assign about = site.data.pages.courses.about -%}
 
 <details class="about-courses">
   <summary class="gym-summary-link"><b>{{ about.summary }}</b></summary>
