--- a/_layouts/take5-raw.html
+++ b/_layouts/take5-raw.html
@@ -6,7 +6,7 @@
 
 <link rel="stylesheet" href="{{ site.url }}/css/take5.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
-{%- assign main = site.data.page.courses -%}
+{%- assign main = site.data.pages.courses -%}
 {%- assign course = site.data.take5[page.course_ID] -%}
 
 {%- assign page_active = "take5" -%}
