fixes careers skills variable, uses built-in include variables
See https://jekyllrb.com/docs/includes/#passing-parameters-to-includes

--- a/_layouts/take5-raw.html
+++ b/_layouts/take5-raw.html
@@ -9,8 +9,7 @@
 {%- assign main = site.data.pages.courses -%}
 {%- assign course = site.data.take5[page.course_ID] -%}
 
-{%- assign page_active = "take5" -%}
-{%- include partials/nav-courses-format.html -%}
+{%- include partials/nav-courses-format.html page_active = "take5" -%}
 
 <div class="container">
   <div class="row">
