--- a/_includes/heros/hero-take5-portfolio.html
+++ b/_includes/heros/hero-take5-portfolio.html
@@ -14,7 +14,7 @@
         <h2 class="take5-brand-kern">Take 5</h2>
         <h1>Portfolio Tutorials</h1>
         <p class="description"><b>Job opportunities. Career pivots. Passion projects.</b></p>
-        <p class="description">There’s always a reason to refresh your online portfolio. Improving your content just got easier thanks to these 5-minute video tutorials.</p>
+        <p class="description">There’s always a reason to refresh your online portfolio. Improving your content just got easier thanks to these <span class="no-wrap">5-minute</span> video tutorials.</p>
       </header>
       <div class="cta">
         <a class="gym-button" href="{{ hero_link }}" target="_blank" rel="noopener"><b>Watch the Tutorials</b></a>
