--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -72,7 +72,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.youtube.com/channel/UCsAAa0dL-ZJpq4gN1zEcXYw" target="_blank" rel="noopener">
+                  <a href="https://www.youtube.com/AquentGymnasium" target="_blank" rel="noopener">
                     <img alt="YouTube play button icon." src="{{site.url}}/img/social/icons/png/icon-youtube-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-youtube.svg" decoding="async" fetchpriority="low" width="20" height="20"> YouTube
                   </a>
                 </li>
