--- a/_layouts/take5-raw.html
+++ b/_layouts/take5-raw.html
@@ -1,8 +1,6 @@
 {% assign base_path = "/courses/take5/" | prepend: site.gymurl %}
 
-{%- if jekyll.environment == "local" -%}
-    {%- include partials/test-top.html -%}
-{%- endif -%}
+{%- include partials/template-top.html -%}
 
 <link rel="stylesheet" href="{{ site.url }}/css/take5.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
@@ -180,9 +178,7 @@
   </div><!-- .row -->
 </div><!-- .container -->
 
-{%- if jekyll.environment == "local" -%}
-    {%- include partials/test-bottom.html -%}
-{%- endif -%}
+{%- include partials/template-bottom.html -%}
 
 {% include take5/detail-opener-js.html %}
 
