--- a/_layouts/test-footer-minimal.html
+++ b/_layouts/test-footer-minimal.html
@@ -1,5 +1,3 @@
 {{ content }}
 
-{%- if jekyll.environment == "local" -%}
-    {%- include partials/test-bottom.html -%}
-{%- endif -%}
+{%- include partials/template-bottom.html -%}
