--- a/_layouts/test-home-minimal.html
+++ b/_layouts/test-home-minimal.html
@@ -1,9 +1,7 @@
-{%- if jekyll.environment == "local" -%}
-    {%- include partials/test-top.html -%}
-    <script>
-      document.title = "Development | Gymnasium";
-    </script>
-{%- endif -%}
+{%- include partials/template-top.html -%}
+<script>
+  document.title = "Development | Gymnasium";
+</script>
 
 <section class="home">
 
@@ -11,6 +9,4 @@
 
 </section>
 
-{%- if jekyll.environment == "local" -%}
-    {%- include partials/test-bottom.html -%}
-{%- endif -%}
+{%- include partials/template-bottom.html -%}
