--- a/_layouts/wrapper-main-container-only.html
+++ b/_layouts/wrapper-main-container-only.html
@@ -1,10 +1,6 @@
 {%- include build-timestamp.html -%}
-{%- if jekyll.environment == "local" -%}
-  {%- include partials/test-top.html -%}
-{%- endif -%}
+{%- include partials/template-top.html -%}
 
 {{ content }}
 
-{%- if jekyll.environment == "local" -%}
-  {%- include partials/test-bottom.html -%}
-{%- endif -%}
+{%- include partials/template-bottom.html -%}
