--- a/_layouts/wrapper-75-25.html
+++ b/_layouts/wrapper-75-25.html
@@ -1,8 +1,6 @@
 {%- include build-timestamp.html -%}
 
-{%- if jekyll.environment == "local" -%}
-  {%- include partials/test-top.html -%}
-{%- endif -%}
+{%- include partials/template-top.html -%}
 
 <div class="container">
   <div class="white-panel">
@@ -19,6 +17,4 @@
   </div><!-- .white-panel -->
 </div><!-- .container -->
 
-{%- if jekyll.environment == "local" -%}
-  {%- include partials/test-bottom.html -%}
-{%- endif -%}
+{%- include partials/template-bottom.html -%}
