--- a/_layouts/wrapper-full-white.html
+++ b/_layouts/wrapper-full-white.html
@@ -1,8 +1,6 @@
 {%- include build-timestamp.html -%}
 
-{%- if jekyll.environment == "local" -%}
-  {%- include partials/test-top.html -%}
-{%- endif -%}
+{%- include partials/template-top.html -%}
 
 <div class="container">
   <div class="white-panel white-panel-space-equal-lr">
@@ -10,6 +8,4 @@
   </div><!-- .white-panel -->
 </div><!-- .container -->
 
-{%- if jekyll.environment == "local" -%}
-  {%- include partials/test-bottom.html -%}
-{%- endif -%}
+{%- include partials/template-bottom.html -%}
