--- a/_includes/heros/hero-courses-evergreen.html
+++ b/_includes/heros/hero-courses-evergreen.html
@@ -1,6 +1,6 @@
 <link rel="preload" href="{{ site.url }}/home/img/hero-courses-evergreen/bg-text-1920w.png?{{ site.time | date:'%s' }}" as="image">
 <link rel="preload" href="{{ site.url }}/home/img/hero-courses-evergreen/gym-gang-1280w.png?{{ site.time | date:'%s' }}" media="(min-width: 45.1em)" as="image">
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-courses-evergreen.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-courses-evergreen.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <article class="hero-promo" id="hero-courses-evergreen">
   <div class="container">
@@ -16,7 +16,7 @@
         <p class="description">Keep your skills fresh with free online courses and 5-minute tutorials on practical topics.</p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/courses"><b>Take a Free Course</b></a>
+        <a class="gym-button gym-button-secondary" href="/courses"><b>Take a Free Course</b></a>
       </div>
     </div>
   </div>
