--- a/_includes/heros/hero-fwl-live-event.html
+++ b/_includes/heros/hero-fwl-live-event.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-fwl-live-event.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-fwl-live-event.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-fwl-live-event">
   <div class="container">
