--- a/_includes/heros/hero-gym-015.html
+++ b/_includes/heros/hero-gym-015.html
@@ -1,11 +1,11 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-gym-015.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-gym-015.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo ux-design" id="hero-gym-015">
   <div class="container">
     <div class="row">
       <div class="col">
         <div class="content-art">
-          <a href="https://thegymnasium.com/courses/course-v1:GYM+015+0/about?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-prototyping-digital-products&utm_content=short-course&utm_content=banner" title="Enroll Now for Free">
+          <a href="/courses/course-v1:GYM+015+0/about?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-prototyping-digital-products&utm_content=short-course&utm_content=banner" title="Enroll Now for Free">
             <img loading="lazy" alt="Prototyping for Digital Products and Websites" decoding="async" importance="high" srcset="{{ site.url }}/home/img/hero-gym-015/gym-015-prototyping-canvas.svg" src="{{ site.url }}/home/img/hero-gym-015/gym-015-prototyping-canvas.png" width="256">
           </a>
         </div>
@@ -16,7 +16,7 @@
             <p class="description"><b class="block">Become a prototyping pro in a day.</b> with Experience Designer, <span class="no-wrap">Jenna Bantjes</span></p>
           </header>
           <div class="cta">
-            <a class="gym-button" href="https://thegymnasium.com/courses/course-v1:GYM+015+0/about?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-prototyping-digital-products&utm_content=short-course&utm_content=banner"><b>Enroll Now for Free</b></a>
+            <a class="gym-button" href="/courses/course-v1:GYM+015+0/about?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-prototyping-digital-products&utm_content=short-course&utm_content=banner"><b>Enroll Now for Free</b></a>
           </div>
         </div>
       </div>
