--- a/_includes/heros/hero-gym-016.html
+++ b/_includes/heros/hero-gym-016.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-gym-016.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-gym-016.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo" id="hero-gym-016">
   <div class="container">
@@ -16,7 +16,7 @@
             <p class="description"><strong>Learn accessible and responsive design <span class="no-wrap">best practices</span></strong> for a more inclusive web with <span class="no-wrap">Ethan Marcotte</span>.</p>
           </header>
           <div class="cta">
-            <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/courses/course-v1:GYM+016+0/about"><b>Enroll Now for Free</b></a>
+            <a class="gym-button gym-button-secondary" href="/courses/course-v1:GYM+016+0/about"><b>Enroll Now for Free</b></a>
           </div>
         </article>
       </div>
