--- a/_includes/heros/hero-webinar-03-2020.html
+++ b/_includes/heros/hero-webinar-03-2020.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-webinar-03-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-webinar-03-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo webinar-03-2020">
   <div class="container">
@@ -7,7 +7,7 @@
         <div class="row">
           <div class="col-md-2">
             <figure class="speaker">
-              <img loading="lazy" alt="Richard Banfield" src="{{ site.url }}/img/webinar-bio-headshots/bio-richard-banfield.jpg" width="160" height="160" decoding="async">
+              <img loading="lazy" alt="Richard Banfield" src="/img/webinar-bio-headshots/bio-richard-banfield.jpg" width="160" height="160" decoding="async">
               <figcaption><b>Richard Banfield</b></figcaption>
             </figure>
           </div>
@@ -15,7 +15,7 @@
         <div class="row">
         <div class="col-md-2">
             <figure class="speaker">
-              <img loading="lazy" alt="Darren Buckner" src="{{ site.url }}/img/webinar-bio-headshots/bio-darren-buckner.jpg" width="160" height="160" decoding="async">
+              <img loading="lazy" alt="Darren Buckner" src="/img/webinar-bio-headshots/bio-darren-buckner.jpg" width="160" height="160" decoding="async">
               <figcaption><b>Darren Buckner</b></figcaption>
             </figure>
           </div>
@@ -29,7 +29,7 @@
             <h3>Mar 17 <span class="slash">/</span> <span class="no-wrap">3 PM EDT</span></h3>
             <p>Join us for a webinar about the realities of remote work — from communication and collaboration to time zones and transparency.</p>
             <div class="cta">
-              <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/webinars/remote-work"><b>Register Now</b></a>
+              <a class="gym-button gym-button-secondary" href="/webinars/remote-work"><b>Register Now</b></a>
             </div>
           </header>
         </div>
