--- a/_includes/sidebar-featured.html
+++ b/_includes/sidebar-featured.html
@@ -8,7 +8,7 @@
 <section>
   <figure>
     <a href="/design-systems">
-      <img class="img-responsive" alt="Design Systems Collection cover image." src="{{ site.url }}/img/hub-pages/og/design-systems-collection-og.png" width="1200" height="628" decoding="async">
+      <img class="img-responsive" alt="Design Systems Collection cover image." src="/img/hub-pages/og/design-systems-collection-og.png" width="1200" height="628" decoding="async">
     </a>
     <figcaption>
       <a href="/design-systems" class="gym-button"><b>Learn More</b></a>
@@ -21,7 +21,7 @@
 <section>
   <figure>
     <a href="/accessibility">
-      <img class="img-responsive" alt="Accessibility Collection cover image." src="{{ site.url }}/img/hub-pages/og/accessibility-collection-og.png" width="1200" height="628" decoding="async">
+      <img class="img-responsive" alt="Accessibility Collection cover image." src="/img/hub-pages/og/accessibility-collection-og.png" width="1200" height="628" decoding="async">
     </a>
     <figcaption>
       <a href="/accessibility" class="gym-button"><b>Learn More</b></a>
@@ -34,7 +34,7 @@
 <section>
   <figure>
     <a href="/ux-design">
-      <img class="img-responsive" alt="UX Design Collection cover image." src="{{ site.url }}/img/hub-pages/og/ux-design-collection-og.png" width="1200" height="628" decoding="async">
+      <img class="img-responsive" alt="UX Design Collection cover image." src="/img/hub-pages/og/ux-design-collection-og.png" width="1200" height="628" decoding="async">
     </a>
     <figcaption>
       <a href="/ux-design" class="gym-button"><b>Learn More</b></a>
