--- a/_includes/take5/recommended-content.html
+++ b/_includes/take5/recommended-content.html
@@ -203,7 +203,7 @@ Placeholder logic for limited design-related recommended content
         </ul>
       </div>
       <div class="cta">
-        <a class="gym-button" href="https://thegymnasium.com/courses"><b>View Course Catalog</b></a>
+        <a class="gym-button" href="/courses"><b>View Course Catalog</b></a>
       </div>
     </section>
     <div class="to-top-link">
@@ -220,7 +220,7 @@ Placeholder logic for limited design-related recommended content
       <p>Learn new skills from expert instructors at your own pace.</p>
     </section>
     <div class="cta">
-      <a class="gym-button" href="https://thegymnasium.com/courses"><b>Take a Free Course</b></a>
+      <a class="gym-button" href="/courses"><b>Take a Free Course</b></a>
     </div>
   </div>
 </div>
