--- a/partials/sidebar-generic.html
+++ b/partials/sidebar-generic.html
@@ -11,11 +11,11 @@ permalink: /partials/sidebar-generic/
 
 <section>
   <figure>
-    <a href="{{ site.gymurl }}/courses/course-v1:GYM+016+0/about">
-      <img class="img-responsive" loading="lazy" alt="Designing Accessible and Responsive Websites cover image." srcset="{{ site.url }}/img/course-artwork/svg/gym-016.svg" src="{{ site.url }}/img/course-artwork/png/gym-016.png" width="574" height="488">
+    <a href="/courses/course-v1:GYM+016+0/about">
+      <img class="img-responsive" loading="lazy" alt="Designing Accessible and Responsive Websites cover image." srcset="/img/course-artwork/svg/gym-016.svg" src="/img/course-artwork/png/gym-016.png" width="574" height="488">
     </a>
     <figcaption>
-      <a href="{{ site.gymurl }}/courses/course-v1:GYM+016+0/about" class="gym-button"><b>Learn More</b></a>
+      <a href="/courses/course-v1:GYM+016+0/about" class="gym-button"><b>Learn More</b></a>
     </figcaption>
   </figure>
   <h2>Designing Accessible and Responsive Websites</h2>
@@ -24,11 +24,11 @@ permalink: /partials/sidebar-generic/
 
 <section>
   <figure>
-    <a href="{{ site.gymurl }}/courses/GYM/103/0/about">
-      <img class="img-responsive" loading="lazy" alt="UX Fundamentals cover image." srcset="{{ site.url }}/img/course-artwork/svg/gym-103.svg" src="{{ site.url }}/img/course-artwork/png/gym-103.png" width="574" height="488">
+    <a href="/courses/GYM/103/0/about">
+      <img class="img-responsive" loading="lazy" alt="UX Fundamentals cover image." srcset="/img/course-artwork/svg/gym-103.svg" src="/img/course-artwork/png/gym-103.png" width="574" height="488">
     </a>
     <figcaption>
-      <a href="{{ site.gymurl }}/courses/GYM/103/0/about" class="gym-button"><b>Learn More</b></a>
+      <a href="/courses/GYM/103/0/about" class="gym-button"><b>Learn More</b></a>
     </figcaption>
   </figure>
   <h2>UX Fundamentals</h2>
