--- a/_includes/courses/featured/gym-shorts.html
+++ b/_includes/courses/featured/gym-shorts.html
@@ -7,7 +7,7 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-12">
               <figure>
-                <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.ID].url }}">
+                <a href="{{ courses[featured.gym_shorts.promo_1.ID].url }}">
                   <img alt="{{ courses[featured.gym_shorts.promo_1.ID].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_1.ID].poster_art }}" decoding="async" fetchpriority="high">
                 </a>
               </figure>
@@ -19,14 +19,14 @@
                     <b>{{ courses[featured.gym_shorts.promo_1.ID].topic }}</b>
                   </p>
                   <h2>
-                    <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.ID].url }}">
+                    <a href="{{ courses[featured.gym_shorts.promo_1.ID].url }}">
                     {{ courses[featured.gym_shorts.promo_1.ID].title }}
                     </a>
                   </h2>
                 </header>
                 <p>{{ courses[featured.gym_shorts.promo_1.ID].short_description }}</p>
                 <div class="cta">
-                  <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.ID].url }}">
+                  <a class="gym-button natural" href="{{ courses[featured.gym_shorts.promo_1.ID].url }}">
                     <b>{{ featured.gym_shorts.promo_1.CTA }}</b>
                   </a>
                 </div>
@@ -41,7 +41,7 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-12">
               <figure>
-                <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.ID].url }}">
+                <a href="{{ courses[featured.gym_shorts.promo_2.ID].url }}">
                   <img alt="{{ courses[featured.gym_shorts.promo_2.ID].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_2.ID].poster_art }}" decoding="async" fetchpriority="high">
                 </a>
               </figure>
@@ -53,14 +53,14 @@
                     <b>{{ courses[featured.gym_shorts.promo_2.ID].topic }}</b>
                   </p>
                   <h2>
-                    <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.ID].url }}">
+                    <a href="{{ courses[featured.gym_shorts.promo_2.ID].url }}">
                     {{ courses[featured.gym_shorts.promo_2.ID].title }}
                     </a>
                   </h2>
                 </header>
                 <p>{{ courses[featured.gym_shorts.promo_2.ID].short_description }}</p>
                 <div class="cta">
-                  <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.ID].url }}">
+                  <a class="gym-button natural" href="{{ courses[featured.gym_shorts.promo_2.ID].url }}">
                     <b>{{ featured.gym_shorts.promo_2.CTA }}</b>
                   </a>
                 </div>
@@ -75,7 +75,7 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-12">
               <figure>
-                <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.ID].url }}">
+                <a href="{{ courses[featured.gym_shorts.promo_3.ID].url }}">
                   <img alt="{{ courses[featured.gym_shorts.promo_3.ID].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_3.ID].poster_art }}" decoding="async" fetchpriority="high">
                 </a>
               </figure>
@@ -87,14 +87,14 @@
                     <b>{{ courses[featured.gym_shorts.promo_3.ID].topic }}</b>
                   </p>
                   <h2>
-                    <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.ID].url }}">
+                    <a href="{{ courses[featured.gym_shorts.promo_3.ID].url }}">
                     {{ courses[featured.gym_shorts.promo_3.ID].title }}
                     </a>
                   </h2>
                 </header>
                 <p>{{ courses[featured.gym_shorts.promo_3.ID].short_description }}</p>
                 <div class="cta">
-                  <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.ID].url }}">
+                  <a class="gym-button natural" href="{{ courses[featured.gym_shorts.promo_3.ID].url }}">
                     <b>{{ featured.gym_shorts.promo_3.CTA }}</b>
                   </a>
                 </div>
