--- a/_includes/heros/articles/advocating-for-accessibility.html
+++ b/_includes/heros/articles/advocating-for-accessibility.html
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-article.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-article.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 <link rel="preload" href="{{ site.url }}/home/img/heros/articles/advocating-for-accessibility/advocating-for-accessibility-1280w.png?{{ site.time | date:'%s' }}" as="image" media="(max-width: 75em)" fetchpriority="high">
 <link rel="preload" href="{{ site.url }}/home/img/heros/articles/advocating-for-accessibility/advocating-for-accessibility-768w.png?{{ site.time | date:'%s' }}" as="image" media="(min-width: 75em)" fetchpriority="high">
-<script nomodule src="{{ site.url }}/js/polyfills/picture/plugins/intrinsic-dimension/pf.intrinsic.min.js?{{ site.time | date:'%s' }}"></script>
-<script nomodule src="{{ site.url }}/js/polyfills/picture/picturefill.min.js?{{ site.time | date:'%s' }}"></script>
+<script nomodule src="/js/polyfills/picture/plugins/intrinsic-dimension/pf.intrinsic.min.js?{{ site.time | date:'%s' }}"></script>
+<script nomodule src="/js/polyfills/picture/picturefill.min.js?{{ site.time | date:'%s' }}"></script>
 <article class="hero-promo" id="advocating-for-accessibility">
   <div class="container">
     <div class="content">
