--- a/_includes/heros/hero-bbd-2020-accessibility.html
+++ b/_includes/heros/hero-bbd-2020-accessibility.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-bbd-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-bbd-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo blue-beanie-day bbd-accessibility">
   <div class="container">
@@ -11,10 +11,10 @@
     <div class="hero-content-copy">
       <header>
         <h1 class="all-caps">Blue Beanie <s>Day</s> <span class="no-wrap">Month <time datetime="2020-11-30">2020</time></span></h1>
-        <p class="description">Learn how to improve your website through accessibility testing with our <b><a href="https://thegymnasium.com/accessibility">live coding tutorials</a></b> in the time it takes to step away for lunch.</p>
+        <p class="description">Learn how to improve your website through accessibility testing with our <b><a href="/accessibility">live coding tutorials</a></b> in the time it takes to step away for lunch.</p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/accessibility"><b>Start Learning</b></a>
+        <a class="gym-button gym-button-secondary" href="/accessibility"><b>Start Learning</b></a>
       </div>
     </div>
   </div>
