--- a/_includes/heros/hero-bbd-2020-gym-016.html
+++ b/_includes/heros/hero-bbd-2020-gym-016.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-bbd-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-bbd-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo blue-beanie-day bbd-gym-016">
   <div class="container">
@@ -11,10 +11,10 @@
     <div class="hero-content-copy">
       <header>
         <h1 class="all-caps">Blue Beanie <s>Day</s> <span class="no-wrap">Month <time datetime="2020-11-30">2020</time></span></h1>
-        <p class="description">Take <b><a href="https://thegymnasium.com/courses/course-v1:GYM+016+0/about">Designing Accessible and Responsive Websites</a></b> with responsive design wiz Ethan Marcotte and improve the user experience of your website.</p>
+        <p class="description">Take <b><a href="/courses/course-v1:GYM+016+0/about">Designing Accessible and Responsive Websites</a></b> with responsive design wiz Ethan Marcotte and improve the user experience of your website.</p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/courses/course-v1:GYM+016+0/about"><b>Enroll for Free</b></a>
+        <a class="gym-button gym-button-secondary" href="/courses/course-v1:GYM+016+0/about"><b>Enroll for Free</b></a>
       </div>
     </div>
   </div>
