--- a/_includes/heros/hero-bbd-2020.html
+++ b/_includes/heros/hero-bbd-2020.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-bbd-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-bbd-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo blue-beanie-day">
   <div class="container">
@@ -11,10 +11,10 @@
     <div class="hero-content-copy">
       <header>
         <h1 class="all-caps">Blue Beanie <s>Day</s> <span class="no-wrap">Month <time datetime="2020-11-30">2020</time></span></h1>
-        <p class="description">Enroll in <b><a href="https://thegymnasium.com/courses/GYM/107/0/about">Modern Web Design</a></b> with web standards wiz Aaron Gustafson and learn how to make an accessible, responsive website.</p>
+        <p class="description">Enroll in <b><a href="/courses/GYM/107/0/about">Modern Web Design</a></b> with web standards wiz Aaron Gustafson and learn how to make an accessible, responsive website.</p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/courses/GYM/107/0/about"><b>Celebrate Web Standards</b></a>
+        <a class="gym-button gym-button-secondary" href="/courses/GYM/107/0/about"><b>Celebrate Web Standards</b></a>
       </div>
     </div>
   </div>
