--- a/_includes/heros/hero-bbd-2021.html
+++ b/_includes/heros/hero-bbd-2021.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-bbd-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-bbd-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo blue-beanie-day">
   <div class="container">
@@ -11,10 +11,10 @@
     <div class="hero-content-copy">
       <header>
         <h1 class="all-caps">Blue Beanie <s>Day</s> <span class="no-wrap">Month <time datetime="2021-11-30">2021</time></span></h1>
-        <p class="description">Learn how to make a more user-friendly web with <b><a href="https://thegymnasium.com/courses/course-v1:GYM+016+0/about">Designing Accessible and Responsive Websites</a></b> taught by Ethan Marcotte.</p>
+        <p class="description">Learn how to make a more user-friendly web with <b><a href="/courses/course-v1:GYM+016+0/about">Designing Accessible and Responsive Websites</a></b> taught by Ethan Marcotte.</p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/courses/course-v1:GYM+016+0/about"><b>Celebrate Web Standards</b></a>
+        <a class="gym-button gym-button-secondary" href="/courses/course-v1:GYM+016+0/about"><b>Celebrate Web Standards</b></a>
       </div>
     </div>
   </div>
