--- a/_includes/heros/hero-collections.html
+++ b/_includes/heros/hero-collections.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-collections.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-collections.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo">
   <div class="container">
@@ -9,7 +9,7 @@
         <p class="description">Explore specific topics with free curated content on design systems, web development, UX design, prototyping, accessibility, and remote work.</p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/collections"><b>Explore Collections</b></a>
+        <a class="gym-button gym-button-secondary" href="/collections"><b>Explore Collections</b></a>
       </div>
     </div>
   </div>
