--- a/_includes/heros/hero-design-systems.html
+++ b/_includes/heros/hero-design-systems.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-design-systems.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-design-systems.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo">
   <div class="container">
@@ -9,7 +9,7 @@
         </p>
       </header>
       <div class="cta">
-        <a class="gym-button" href="https://thegymnasium.com/design-systems"><b>Get Started</b></a>
+        <a class="gym-button" href="/design-systems"><b>Get Started</b></a>
       </div>
     </div>
   </div>
