--- a/_includes/heros/hero-dfg-2021.html
+++ b/_includes/heros/hero-dfg-2021.html
@@ -1,5 +1,5 @@
 <link rel="preload" href="{{ site.url }}/home/img/hero-dfg-2021/designing-for-good-2021-hero-2000w.jpg" as="image" media="(min-width: 76em)">
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-dfg-2021.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-dfg-2021.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo" id="hero-dfg-2021">
   <div class="container">
