--- a/_includes/heros/hero-gym-005.html
+++ b/_includes/heros/hero-gym-005.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-gym-005.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-gym-005.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo ux-design dark-mode-sketch" id="hero-gym-005">
   <div class="container">
@@ -8,7 +8,7 @@
         <header>
           <h1><span class="ux-design-text block">All New</span> Introducing Sketch <span class="no-wrap">for <span class="no-wrap">UX and UI</span></span></h1>
           <div class="cta">
-            <a class="gym-button gym-button-secondary" title="Learn More About Sketch" href="https://thegymnasium.com/courses/GYM/005/0/about?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-sketch-2018-update&utm_content=banner"><b>View the Course</b></a>
+            <a class="gym-button gym-button-secondary" title="Learn More About Sketch" href="/courses/GYM/005/0/about?utm_source=gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-sketch-2018-update&utm_content=banner"><b>View the Course</b></a>
           </div>
         </header>
         <figure id="sketch-prototyping">
