--- a/_includes/heros/hero-promo-badges.html
+++ b/_includes/heros/hero-promo-badges.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-promo-badges.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-promo-badges.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo" id="badges">
   <div class="container">
@@ -8,7 +8,7 @@
         <p>Gym Shorts just got <em>way</em> better!</p>
         <p>Pass the final exam and…</p>
         <div class="cta">
-          <a class="gym-button gym-button-shrink-wrap" title="Get Started" href="https://thegymnasium.com/courses?utm_source=Gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-badging-announcement&utm_content=banner#gymshorts"><b>Earn a Badge</b></a>
+          <a class="gym-button gym-button-shrink-wrap" title="Get Started" href="/courses?utm_source=Gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-badging-announcement&utm_content=banner#gymshorts"><b>Earn a Badge</b></a>
         </div>
       </div>
     </div>
