--- a/_includes/heros/hero-promo-rdf.html
+++ b/_includes/heros/hero-promo-rdf.html
@@ -1,9 +1,9 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-promo-rdf.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-promo-rdf.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo-rdf">
   <div class="container">
     <figure class="course-artwork">
-      <img loading="lazy" alt="Responsive Web Design Fundamentals" src="https://thegymnasium.com/asset-v1:GYM+109+0+type@asset+block@gym-109.png">
+      <img loading="lazy" alt="Responsive Web Design Fundamentals" src="/asset-v1:GYM+109+0+type@asset+block@gym-109.png">
     </figure>
     <header>
       <h1>Responsive <span class="no-wrap">Web Design</span> Fundamentals</h1>
@@ -11,7 +11,7 @@
       <p>A code-intensive course on how to build responsive websites that look great across devices.</p>
     </header>
     <div class="cta">
-      <a class="gym-button" href="https://thegymnasium.com/courses/course-v1:GYM+109+0/about?utm_source=Gymnasium&utm_medium=web&utm_campaign=AQ_NA_new-course-gym-109-rdf&utm_content=banner"><b>Code Like a Pro</b></a>
+      <a class="gym-button" href="/courses/course-v1:GYM+109+0/about?utm_source=Gymnasium&utm_medium=web&utm_campaign=AQ_NA_new-course-gym-109-rdf&utm_content=banner"><b>Code Like a Pro</b></a>
     </div>
   </div>
 </div>
