--- a/_includes/heros/hero-take5-campaign.html
+++ b/_includes/heros/hero-take5-campaign.html
@@ -1,5 +1,5 @@
-<link rel="preload" href="{{ site.url }}/img/take5/posters/gym-5019-hero.jpg?{{ site.time | date:'%s' }}" as="image" media="(min-width: 75em)">
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-take5-campaign.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="preload" href="/img/take5/posters/gym-5019-hero.jpg?{{ site.time | date:'%s' }}" as="image" media="(min-width: 75em)">
+<link rel="stylesheet" href="/css/heros/hero-take5-campaign.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo" id="hero-take5-campaign">
   <div class="hero-content-art">
@@ -17,7 +17,7 @@
         <p class="description">Watch free video tutorials on design, development, accessibility, prototyping, UX, and career skills.</p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/courses/take5"><b>Learn Something New</b></a>
+        <a class="gym-button gym-button-secondary" href="/courses/take5"><b>Learn Something New</b></a>
       </div>
     </div>
   </div>
