--- a/_includes/heros/hero-ukraine-relief.html
+++ b/_includes/heros/hero-ukraine-relief.html
@@ -1,6 +1,6 @@
 <link rel="preload" href="{{ site.url }}/home/img/hero-ukraine-relief/andriyko-podilnyk-TaWaGbjp60Q-unsplash-1280w.jpg?{{ site.time | date:'%s' }}" media="(max-width: 75em)" as="image">
 <link rel="preload" href="{{ site.url }}/home/img/hero-ukraine-relief/andriyko-podilnyk-TaWaGbjp60Q-unsplash-1920w.jpg?{{ site.time | date:'%s' }}" media="(min-width: 75em)" as="image">
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-ukraine-relief.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-ukraine-relief.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <article class="hero-promo" id="hero-ukraine-relief">
   <div class="container">
