--- a/_includes/heros/hero-ux-design-collection.html
+++ b/_includes/heros/hero-ux-design-collection.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-ux-design-collection.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-ux-design-collection.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo">
   <div class="container">
@@ -13,7 +13,7 @@
       <p>Experience endless learning opportunities with our free collection of <b>UX courses</b>, <b>webinars</b>, <b>articles</b>, and <b>jobs</b>.</p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/ux-design?utm_source=Gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-ux-design-landing-page&utm_content=091019"><b>Explore UX Design</b></a>
+        <a class="gym-button gym-button-secondary" href="/ux-design?utm_source=Gymnasium&utm_medium=web&utm_campaign=AQ_NA_GYM-ux-design-landing-page&utm_content=091019"><b>Explore UX Design</b></a>
       </div>
       </div>
       </div>
