--- a/_includes/heros/hero-webinar-05-2019.html
+++ b/_includes/heros/hero-webinar-05-2019.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-webinar-05-2019.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-webinar-05-2019.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo webinar-05-2019">
   <div class="container">
