--- a/_includes/heros/hero-webinar-05-2020.html
+++ b/_includes/heros/hero-webinar-05-2020.html
@@ -1,6 +1,6 @@
 <link rel="preload" href="{{ site.url }}/home/img/hero-webinar-05-2020/ethanmarcotte-2020-1080w.jpg" as="image" media="(min-width: 70em)">
 <link rel="preload" href="{{ site.url }}/home/img/hero-webinar-05-2020/ala-306-rwd-2010-20-720w.png" as="image" media="(min-width: 70em)">
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-webinar-05-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/heros/hero-webinar-05-2020.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 <div class="hero-promo hero-promo-webinar">
   <div class="container">
@@ -21,7 +21,7 @@
               {%- endif -%}
             </header>
             <div class="cta">
-              <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/webinars/decade-of-responsive-web-design">
+              <a class="gym-button gym-button-secondary" href="/webinars/decade-of-responsive-web-design">
               <b>
               {%- if site.data.webinars.web0013-decade-of-responsive-web-design.video == true -%}
               Watch Now
