--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -27,9 +27,9 @@ See here for additional notes on how to improve this and avoid browser warnings:
 https://stackoverflow.com/questions/50824181/preloading-google-fonts
 {%- endcomment -%}
 <link rel="preconnect" href="{{ site.url }}">
-<link rel="preload" fetchpriority="high" href="{{ site.url }}/css/fonts/brandon-grotesque.css?{{ site.time | date:'%s' }}" as="style">
-<link rel="preload" fetchpriority="high" href="{{ site.url }}/css/fonts/font-awesome.css?{{ site.time | date:'%s' }}" as="style">
-<link rel="preload" fetchpriority="high" href="{{ site.url }}/css/main.css?{{ site.time | date:'%s' }}" as="style">
+<link rel="preload" fetchpriority="high" href="/css/fonts/brandon-grotesque.css?{{ site.time | date:'%s' }}" as="style">
+<link rel="preload" fetchpriority="high" href="/css/fonts/font-awesome.css?{{ site.time | date:'%s' }}" as="style">
+<link rel="preload" fetchpriority="high" href="/css/main.css?{{ site.time | date:'%s' }}" as="style">
 
 {%- comment -%} TODO: investigate preloading these directly? See https://github.com/gymnasium/tracker/issues/286
 <link rel="preload" href="{{ site.url }}/fonts/brandon_reg-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
@@ -37,9 +37,9 @@ https://stackoverflow.com/questions/50824181/preloading-google-fonts
 <link rel="preload" href="{{ site.url }}/fonts/brandon_blk-webfont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 {%- endcomment -%}
 
-<link rel="stylesheet" href="{{ site.url }}/css/fonts/brandon-grotesque.css?{{ site.time | date:'%s' }}">
-<link rel="stylesheet" href="{{ site.url }}/css/fonts/font-awesome.css?{{ site.time | date:'%s' }}">
-<link rel="stylesheet" href="{{ site.url }}/css/main.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="/css/fonts/brandon-grotesque.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="/css/fonts/font-awesome.css?{{ site.time | date:'%s' }}">
+<link rel="stylesheet" href="/css/main.css?{{ site.time | date:'%s' }}">
 
 {%- if page.css -%}
   {%- for css_file in page.css -%}
