--- a/_layouts/take5-raw.html
+++ b/_layouts/take5-raw.html
@@ -2,7 +2,7 @@
 
 {%- include partials/template-top.html -%}
 
-<link rel="stylesheet" href="{{ site.url }}/css/take5.css?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="stylesheet" href="/css/take5.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 {%- assign main = site.data.pages.courses -%}
 {%- assign course = site.data.take5[page.course_ID] -%}
