--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -102,7 +102,7 @@
                 <li><a href="https://aquenttalent.com" target="_blank" rel="noopener">Aquent Talent</a></li>
                 <li><a href="https://aquentstudios.com" target="_blank" rel="noopener">Aquent Studios</a></li>
                 <li><a href="https://www.robohead.net" target="_blank" rel="noopener">Aquent RoboHead</a></li>
-                <li><a href="https://www.goscoutgo.com" target="_blank" rel="noopener">Aquent Scout</a></li>
+                <li><a href="https://aquentscout.com" target="_blank" rel="noopener">Aquent Scout</a></li>
               </ul>
             </section>
           </div>
