Update accessibility collection hero
- Update CTA layout and style

--- a/_includes/heros/hero-accessibility.html
+++ b/_includes/heros/hero-accessibility.html
@@ -9,7 +9,7 @@
         <p class="description">No matter what your title is, creating an inclusive web is a team effort. Explore our free collection of accessibility content for beginners, experts, and everyone in between.</p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="https://thegymnasium.com/accessibility"><b>Start Learning</b></a>
+        <a class="gym-button natural" href="https://thegymnasium.com/accessibility"><b>Start Learning</b></a>
       </div>
     </div>
   </div>
