--- a/css/heros/hero-accessibility.scss
+++ b/css/heros/hero-accessibility.scss
@@ -126,7 +126,15 @@
 
 // cta
 
-.hero-promo .cta {
-  margin-top: 3rem;
-  margin-bottom: 1rem;
+.hero-promo {
+
+  .cta {
+    margin-top: 3rem;
+    margin-bottom: 1rem;
+  }
+
+  a.gym-button {
+    border: 2px solid $gym-white;
+  }
+
 }
