--- a/_layouts/webinar.html
+++ b/_layouts/webinar.html
@@ -6,7 +6,7 @@
 
 {% assign webinar = site.data.webinars[page.event_ID] %}
 <!--//
-event_title: {{ webinar.event_title | strip_html }}
+title: {{ webinar.title | strip_html }}
 event_guests: {{ webinar.event_guests | strip_html }}
 page_title: {{ webinar.page_title | strip_html }}
 description: {{ webinar.description  | strip_html }}
@@ -55,7 +55,7 @@ video_ID: {{ webinar.video_ID }}
       </header>
 
       <header class="event-banner-hero event-theme-{{ webinar.content_category }}">
-      <h1>{{ webinar.event_title }}</h1>
+      <h1>{{ webinar.title }}</h1>
       <h2>{{ webinar.event_guests }}</h2>
 
       {% if webinar.video %}
