`course_type` to `type`

--- a/_includes/take5/catalog-topic-group.html
+++ b/_includes/take5/catalog-topic-group.html
@@ -37,7 +37,7 @@
           </a>
         </div>
         <footer>
-          <p><b>{{ item.course_type | replace: 'take5', 'Tutorial' }}</b></p>
+          <p><b>{{ item.type | replace: 'take5', 'Tutorial' }}</b></p>
           <p>{{ item.skill_level }}</p>
         </footer>
       </article>
