lowercase & liquid extensions

--- a/_includes/courses/featured/full-courses.html
+++ b/_includes/courses/featured/full-courses.html
@@ -27,7 +27,7 @@
                 <p>{{ courses[featured.full_courses.promo_1.ID].description }}</p>
                 <div class="cta">
                   <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.full_courses.promo_1.ID].url }}">
-                    <b>{{ featured.full_courses.promo_1.CTA }}</b>
+                    <b>{{ featured.full_courses.promo_1.cta }}</b>
                   </a>
                 </div>
               </article>
@@ -61,7 +61,7 @@
                 <p>{{ courses[featured.full_courses.promo_2.ID].description }}</p>
                 <div class="cta">
                   <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.full_courses.promo_2.ID].url }}">
-                    <b>{{ featured.full_courses.promo_2.CTA }}</b>
+                    <b>{{ featured.full_courses.promo_2.cta }}</b>
                   </a>
                 </div>
               </article>
@@ -95,7 +95,7 @@
                 <p>{{ courses[featured.full_courses.promo_3.ID].description }}</p>
                 <div class="cta">
                   <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.full_courses.promo_3.ID].url }}">
-                    <b>{{ featured.full_courses.promo_3.CTA }}</b>
+                    <b>{{ featured.full_courses.promo_3.cta }}</b>
                   </a>
                 </div>
               </article>
