--- a/_includes/take5/recommended-content.html
+++ b/_includes/take5/recommended-content.html
@@ -202,7 +202,7 @@ TODO: rather than hard-coding values here, a more flexible method would be to cr
   </div>
 </div>
 
-<!-- Courses CTA -->
+<!-- Courses cta -->
 <div class="cta-message">
   <div class="container">
     <section>
