lowercase & liquid extensions

--- a/_includes/take5/recommended-content.html
+++ b/_includes/take5/recommended-content.html
@@ -212,7 +212,7 @@ Placeholder logic for limited design-related recommended content
   </div>
 </div>
 
-<!-- Courses CTA -->
+<!-- Courses cta -->
 <div class="cta-message">
   <div class="container">
     <section>
