Update test-top partial
- Update brand image path
- Update brand image alt text

--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -66,7 +66,7 @@
           <div class="container">
 
             <a class="site-logo" href="/">
-              <img class="gymnasium-logo" alt="Aquent Gymnasium homepage" src="https://dev.thegymcms.com/img/brand/png/gymnasium-logo-white-4x.png" srcset="https://dev.thegymcms.com/img/brand/svg/gymnasium-logo-white.svg" width="200" height="23" decoding="async" fetchpriority="high">
+              <img class="gymnasium-logo" alt="Gymnasium Homepage" src="{{site.url}}/img/brand/png/gymnasium-logo-white-4x.png" srcset="{{site.url}}/img/brand/svg/gymnasium-logo-white.svg" decoding="async" fetchpriority="high" width="200" height="23">
             </a>
 
             {%- assign menuclass = "logged-out" -%}
