Update page styling
- Update paragraph spacing

--- a/css/static-main-content.scss
+++ b/css/static-main-content.scss
@@ -132,6 +132,10 @@
     border-top: 1px dashed $gym-gray;
     margin-top: 1.2em;
 
+    p {
+      margin-top: 1rem;
+    }
+
     .date {
       display: inline-block;
       position: relative;
