Update livestream hero
- Update short description and byline layout
- Update livestream title (shorten)

--- a/_includes/heros/live-streams/content.html
+++ b/_includes/heros/live-streams/content.html
@@ -4,11 +4,8 @@
 
 <header>
   <div class="container">
-    <hgroup>
-      <h2>{{ hero.title }}</h2>
-      <p><b>with {{ hero.byline }}</b></p>
-    </hgroup>
-    <p>{{ hero.short_description }}</p>
+    <h2>{{ hero.title }}</h2>
+    <p><b>{{ hero.short_description }}</b> <span>{{ hero.byline }}</span></p>
   </div>
 </header>
 
